<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="center_vertical">

  <TextView
    android:id="@+id/ranking"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="1"
    android:textAlignment="center"
    android:text="@string/ranking_header"
    style="@style/TextAppearance.Material3.TitleMedium"/>

  <TextView
    android:id="@+id/display_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="2"
    android:text="@string/display_name_header"
    android:textAlignment="textStart"
    style="@style/TextAppearance.Material3.TitleMedium"/>

  <TextView
    android:id="@+id/score"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="1"
    android:text="@string/score_header"
    android:textAlignment="textEnd"
    style="@style/TextAppearance.Material3.TitleMedium"/>

<!--  <TextView-->
<!--    android:id="@+id/rows_removed"-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="@dimen/half_static_spacing"-->
<!--    android:layout_weight="1"-->
<!--    android:text="@string/rows_removed_header"-->
<!--    android:textAlignment="textEnd"-->
<!--    style="@style/TextAppearance.Material3.TitleMedium"/>-->

  <TextView
    android:id="@+id/created"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="2"
    android:text="@string/created_header"
    android:textAlignment="textStart"
    style="@style/TextAppearance.Material3.TitleMedium"/>

</LinearLayout>